[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vm-connector"
version = "0.1.0"
description = "A professional command-line tool for VMware VM management and interactive SSH sessions"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
dependencies = [
    "paramiko>=3.4.0",
    "pyyaml>=6.0.1",
    "pyvmomi>=8.0.2.0.1"
]

[project.scripts]
vm-connector = "vm_connector.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
